<resources>

    <string name="app_name">足球大数据</string>
	<!-- Volley error -->
    <string name="no_internet">无网络连接~！</string>
	<string name="generic_server_down">连接服务器失败~！</string>
	<string name="generic_error">网络异常,请稍后再试~！</string>
	
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 数据信息 -->
    <string name="data_info">数据信息</string>
    <string name="match_index">指数</string>
    <string name="match_ball">滚球</string>
    <string name="match_statistics">赛事统计</string>
    <!-- 推荐战绩 -->
    <string name="statistics_infoContorl">数据信息管理</string>
    <string name="statistics_recommend">推荐战绩</string>
    <!-- 赛事 -->
    <string name="event_result">赛果</string>
    <string name="event_schedule">赛程</string>
    <string name="event_data">资料</string>
    
    <!-- 首页 -->
    <string name="match_analysis">数据信息</string>
    <string name="match_statistic">战绩统计</string>
    
    <!-- 标题 -->
    <string name="match">比赛</string>
    <string name="event">赛事</string>
    <string name="my">我的</string>
    <string name="focus">关注</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="statistic">战绩统计</string>
    <string name="match_detail">比赛详情</string>
    <string name="big_data">大数据报告</string>
    <string name="help">助手</string>
    
    <string name="login">登陆</string>
    
    <!-- 通知栏 -->
    <string name="app_awesome_name">为您分享最专业的数据推荐</string>
    
    <!-- 数据信息管理 -->
    <string name="team">球队</string>
    <string name="time">时间</string>
    <string name="content">内容</string>
    <string name="state">状态</string>
    
    <!-- 战绩统计 -->
    <string name="btn_start">开始时间</string>
    <string name="btn_end">结束时间</string>
    
    <!--软件更新模块-->
    <string name="update_title">软件更新</string>
    <string name="update_info">检测到新版本，立即更新吗？</string>
    <string name="update_update">更新</string>
    <string name="update_later">稍后更新</string>
    <string name="update_updating">正在更新</string>
    <string name="update_cancel">取消</string>
    <string name="update_no">已经是最新版本</string>
  
</resources>
