<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:orientation="vertical" > 
    <include layout="@layout/top_menu" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/team" 
            android:textColor="#646b76"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/time" 
            android:textColor="#646b76"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/content"
            android:textColor="#646b76" 
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/state" 
            android:textColor="#646b76"
            />
       
    </LinearLayout>
    <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="#dedfe0" 
           />
    <com.chunsoft.view.xListview.XListView
        android:id="@+id/x_lv"
        android:background="#eeeeee"
        android:dividerHeight="1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000" >       
    </com.chunsoft.view.xListview.XListView>
</LinearLayout>
