<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/top_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_index"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/match_index"
                android:textColor="@color/title" />

            <View
                android:layout_width="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"
                android:background="@color/bg_Gray" />

            <TextView
                android:id="@+id/tv_ball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/match_ball"
                android:textColor="#54585b" />

            <View
                android:layout_width="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"
                android:background="@color/bg_Gray" />

            <TextView
                android:id="@+id/tv_statistics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/match_statistics"
                android:textColor="#54585b" />
            
			<View
                android:layout_width="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"
                android:background="@color/bg_Gray" />
            
        </LinearLayout>

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:id="@+id/v_index"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/title" />
            <View
                android:id="@+id/v_ball"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/line_normal" />
            <View
                android:id="@+id/v_statistics"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/line_normal" />
           
        </LinearLayout>
        
        <RelativeLayout 
            android:id="@+id/show_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></RelativeLayout>
        
    </LinearLayout>

</RelativeLayout>



